--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,9 @@
+/* PROBLEMS:
+  MISSION TEXT should have smaller top and smaller black margin form the image
+
+*/
+
+
 body {
   font-family: Helvetica;
   font-size: 22px;
@@ -6,6 +12,9 @@ body {
   opacity: 0.9;
   text-align: center;
 }
+
+
+/* HEADER */
 
 header {
   display: fixed;
@@ -26,4 +35,26 @@ header img {
 .menubuttons nav a {
   text-decoration: underline;
   color: seashell;
+}
+
+
+/* CONTENT */
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* OUR MISSION */
+.mission {
+  display: flex;
+  flex-direction: column;
+  background-image: url("../images/img-mission-background.jpg");
+  height: 700px;
+  width: 1200px;
+  justify-content: center;
+}
+
+.mission_text {
+  background-color: black;
 }
