--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,3 +79,25 @@ header img {
   width: 1000px;
   padding-top: 10px;
 }
+
+/* SI PUO' RAZIONALIZZARE QUANTO SEGUE ANZICHE' CREANDO UNA NUOVA CLASSE A PARTE CHE E RIDONDANTE CON QUELLE DELLA PRIMA RIGA DI IMMAGINI,
+UTILIZZARE LA VECCHIA CLASSE PIU' UN'ALTRA CHE FACCIA UN OVERRIDE DELLA LARGHEZZA CON QUESTA RIDOTTA DI 660PX */
+
+.featured_tea2 {
+  display: flex;
+  padding-top: 20px;
+  width: 660px;
+  justify-content: space-around;
+}
+
+.featured_tea2 img {
+  width: 300px;
+  height: 200px;
+}
+
+.featured_tea_description2 {
+  display: flex;
+  justify-content: space-around;
+  width: 660px;
+  padding-top: 10px;
+}
