--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -123,16 +123,19 @@ UTILIZZARE LA VECCHIA CLASSE PIU' UN'ALTRA CHE FACCIA UN OVERRIDE DELLA LARGHEZZ
   opacity: 1;
   width: 300px;
   background-color: black;
-  margin: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
   height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
 
-/* FOOTER */
-footer {
+/* CONTACTS */
+.contacts {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  height: 200px;
+  padding-top: 10px;
 }
